# pretty-git-ui

./: .clippy.toml  CLAUDE.md  Cargo.toml  Makefile  README.md  justfile  rust-toolchain.toml  rustfmt.toml
.claude/: CLAUDE.md
.claude/commands/: push.md  refactor.md
.git-hooks/: pre-commit
.github/workflows/: release.yaml
formula/: index.rb
src/: app.rs  git.rs  lib.rs  main.rs  ui.rs  ui_help.rs
tests/: integration_test.rs
