[package]
name = "pretty-git-ui"
version = "0.1.0"
edition = "2021"
authors = ["mmrakt"]
description = "A beautiful terminal-based Git user interface built with Rust"
repository = "https://github.com/mmrakt/pretty-git-ui"
license = "MIT"
keywords = ["git", "tui", "terminal", "cli"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
crossterm = "0.25"
tui = "0.19"

[dev-dependencies]
tempfile = "3.8"

[lints.clippy]
# Clippy configuration for code quality
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

# Allow some pedantic lints that are too strict for this codebase
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
used_underscore_binding = "allow"
cast_possible_truncation = "allow"
multiple_crate_versions = "allow"

[lints.rust]
unsafe_code = "forbid"
missing_docs = "allow"  # Too noisy for now, will enable later
